1-sock-shop-install/3-virtual-services-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: sock-shop
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /cart
    - uri:
        exact: /catalogue
    - uri:
        prefix: /catalogue
    - uri:
        prefix: /css
    - uri:
        prefix: /js
    - uri:
        prefix: /img
    - uri:
        regex: '^.*\.(ico|png|jpg|html)$'
    route:
    - destination:
        host: front-end
        port:
          number: 30001
